--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <li><a href="#page_top">Home</a></li>
                 <li><a href="#page_about_me">About Me</a></li>
                 <li><a href="#page_projects">My Projects</a></li>
+                <li><a href="#page_cv">CV</a></li>
                 <li><a href="#page_contact">Contact</a></li>
               </ul>
             </div>
@@ -61,9 +62,9 @@
                 <hr>
                 <h3>I am a first year MEng Computer Science student studying at University College London <i class="fa fa-university"></i></h3>
                 <ul>
-                    <li><h3>I constantly find <strong>new</strong> things to do.</h3></li>
-                    <li><h3>This ranges from figuring out how to solve a <strong>3x3 rubiks cube</strong> to learning to play the <strong>acoustic guitar</strong>.</h3></li>
+                    <li><h3>I constantly find <strong>new</strong> things to do, which ranges from figuring out how to solve a <strong>3x3 rubiks cube</strong> to learning to play the <strong>acoustic guitar</strong></h3></li>
                     <li><h3>Software development <strong>drives me</strong> as it constantly provides me with <em>something <strong>new</strong> to create.</em></h3></li>
+                    <li><h3>To me, programming is another dimension to the world; one which enables me to capture my creative impulse.</h3></li>
                 </ul>
 
             </header>
@@ -83,19 +84,24 @@
                         <i class="fa fa-code" style="color:#30f000;"></i>
                         <h3>Skills</h3>
                         <div class="skills">
-                            <span class="label label-primary">Java/Android</span>
-                            <span class="label label-success">C/C++</span>
+                            <span class="label label-primary">Java / Android</span>
+                            <span class="label label-success">C / C++</span>
+                            <span class="label label-danger">HTML / CSS</span>
+                            <span class="label label-warning">PHP / MySQL</span>
                             <span class="label label-info">VB.NET</span>
-                            <span class="label label-danger">HTML5/CSS3</span>
                             <span class="label label-default">Haskell</span>
-                            <span class="label label-warning">Git/Github</span>
+                            <span class="label label-custom">Github</span>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <i class="fa fa-trophy" style="color:#00b3fe;"></i>
-                        <h3>Achievements</h3>
-                        <p><strong>IGCSE: 8 A*s</strong> with A* in Mathematics and Computer Studies</p>
-                        <p><strong>IB: 40/45</strong> with 7 in HL Computer Science, 7 in HL Physics and 6 in HL Mathematics</p>
+                        <h3>Activities</h3>
+                        <p>UCLU Tech Society Member</p>
+                        <p>UCLU Poker Society Member</p>
+                        <p>UCLU Mixed Volleyball Team Member</p>
+                        <p>UCLU Parkour Society Member</p>
+                        <p>Co-founder of Primary School Basketball Camp</p>
+                        <p>Part-time Waiter at BBQ Restaurant</p>
                         <br/>
                     </div>
                 </div>
@@ -206,24 +212,33 @@
             </div>
         </section>
 
+        <a name="page_cv"></a>
+
+         <section id="bg_cv">
+            <div class="row">
+                <h2 id="subheadings">CV</h2>
+                <div style="text-align:center;">
+                    <embed src="http://bmin.comxa.com/BrianMin_CV_Resume.pdf#toolbar=0&navpanes=0&scrollbar=0" width="800" height="1000">
+                </div>
+            </div>
+        </section>
+
         <a name="page_contact"></a>
 
         <section id="bg_contact">
             <div class="row">
                 <h2 id="subheadings">Contact</h2>
-                <h3>Any enquiries? Connect with me</h3>
-                <div style="text-align:center;">
-                    <a href="https://www.facebook.com/brian.min.965" target="_blank"><i class="fa fa-facebook-square" style="color:#00b3fe;"></i></a>
-                    <a href="https://www.instagram.com/bymi15/" target="_blank"><i class="fa fa-instagram" style="color:#cc4400;"></i></a>
-                    <a href="https://www.linkedin.com/in/bymi15" target="_blank"><i class="fa fa-linkedin-square" style="color:#3333ff;"></i></a>
-                    <a href="https://github.com/bymi15" target="_blank"><i class="fa fa-github-square" style="color:#6600cc;"></i></a>
-                    <a href="mailto:bymi15@yahoo.com?Subject=Brian%20Min%20Website%20-%20Enquiry"><i class="fa fa-envelope" style="color:#cc8810"></i></a>
-                </div>
+                <h3>Connect with me through my social networks or feel free to drop me an email:</h3>
+                <a href="https://www.facebook.com/brian.min.965" class="icon facebook" target="_blank"><i class="fa fa-facebook-square"></i></a>
+                <a href="https://www.instagram.com/bymi15/" class="icon instagram" target="_blank"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/bymi15" class="icon linkedin" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+                <a href="https://github.com/bymi15" class="icon github" target="_blank"><i class="fa fa-github-square"></i></a>
+                <a href="mailto:bymi15@yahoo.com?Subject=Brian%20Min%20Website%20-%20Enquiry" class="icon email"><i class="fa fa-envelope"></i></a>
             </div>
         </section>
 
         <footer id="page_footer">
-            &copy; 2015 Brian Min. All rights reserved.
+            &copy; 2016 Brian Min. All rights reserved.
         </footer>
     </div>
 
