--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     <!-- Smooth scroll Javascript file -->
     <script type="text/javascript" src="js/smoothscroll.js"></script>
 
-    <!-- Google Analytics
+    <!-- Google Analytics -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -262,7 +262,7 @@
 
       ga('create', 'UA-71639378-1', 'auto');
       ga('send', 'pageview');
-    </script>-->
+    </script>
 
 </body>
 </html>
