fixed a small bug

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
 
                 <a class="btn btn-danger" href="http://bmin.comxa.com/BrianMin_CV_Resume.pdf" target="_blank">View CV/Resume</a></button>
 
-                <ul id="about_me_list">
-                    <li><h3>I constantly find <strong>new</strong> things to do, which ranges from figuring out how to solve a <strong>3x3 rubiks cube</strong> to learning to play the <strong>acoustic guitar</strong></h3></li>
-                    <li><h3>Software development <strong>drives me</strong> as it constantly provides me with <em>something <strong>new</strong> to create.</em></h3></li>
-                    <li><h3>To me, programming is another dimension to the world; one which enables me to capture my creative impulse.</h3></li>
-                </ul><br>
+                <div id="about_me_list">
+                    <h3>I constantly find <strong>new</strong> things to do, which ranges from figuring out how to solve a <strong>3x3 rubiks cube</strong> to learning to play the <strong>acoustic guitar</strong></h3>
+                    <h3>Software development <strong>drives me</strong> as it constantly provides me with <em>something <strong>new</strong> to create.</em></h3>
+                    <h3>To me, programming is another dimension to the world; one which enables me to capture my creative impulse.</h3>
+                </div><br>
 
             </header>
 
