fixed a few bugs

--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
-    <a name="page_top"></a>
-    <div class="container-fluid">
+<body name="page_top">
         <section class="jumbotron">
             <div class="col-xs-12">
                 <img class="img-responsive" src="images/profile.png" alt="">
@@ -62,14 +60,13 @@
           </div>
         </nav>
 
-        <a name="page_about_me"></a>
-        <section id="bg_about_me">
+        <section id="bg_about_me" name="page_about_me">
             <header class="centered">
                 <h2 id="subheadings">About Me</h2>
                 <hr>
                 <h3>I am a first year MEng Computer Science student studying at University College London <i class="fa fa-university"></i></h3>
 
-                <a class="btn btn-danger" href="http://bmin.comxa.com/BrianMin_CV_Resume.pdf" target="_blank">View CV/Resume</a></button>
+                <a class="btn btn-primary" href="http://bmin.comxa.com/BrianMin_CV_Resume.pdf" target="_blank">View CV/Resume</a></button>
 
                 <div id="about_me_list">
                     <h3>I constantly find <strong>new</strong> things to do, which ranges from figuring out how to solve a <strong>3x3 rubiks cube</strong> to learning to play the <strong>acoustic guitar</strong></h3>
@@ -81,7 +78,7 @@
 
             <div id="about_me">
                 <div class="row centered">
-                    <div class="col-sm-4">
+                    <div class="col-sm-4" style="padding: 30px;">
                         <i class="fa fa-heart-o" style="color:#e30000;"></i>
                         <h3>Interests</h3>
                         <div class="interests">
@@ -90,7 +87,7 @@
                             <span class="label label-primary">Problem Solving</span><br/>
                         </div>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-4" style="padding: 50px;">
                         <i class="fa fa-code" style="color:#30f000;"></i>
                         <h3>Skills</h3>
                         <div class="skills">
@@ -103,7 +100,7 @@
                             <span class="label label-custom">Github</span>
                         </div>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-4" style="padding: 50px;">
                         <i class="fa fa-trophy" style="color:#00b3fe;"></i>
                         <h3>Activities</h3>
                         <p>UCLU Tech Society Member</p>
@@ -238,7 +235,6 @@
         <footer id="page_footer">
             &copy; 2016 Brian Min. All rights reserved. Created using <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a>. Animation from <a href="http://bxslider.com" target="_blank">BxSlider</a> and <a href="https://github.com/kswedberg/jquery-smooth-scroll" target="_blank">SmoothScroll</a> all under the <a href="http://opensource.org/licenses/MIT" target="_blank">MIT license</a>.
         </footer>
-    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
