updated CV link and added photos for UCLKS

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Brian Min - Personal Website">
+    <meta name="description" content="Brian Min - Personal Portfolio">
     <meta name="keywords" content="brian,min,portfolio,ucl,computer,science">
     <meta name="author" content="Brian Min">
     <link rel="shortcut icon" href="images/favicon.png">
@@ -54,7 +54,7 @@
                 <li><a href="#page_about_me">About Me</a></li>
                 <li><a href="#page_projects">My Projects</a></li>
                 <li><a href="#page_contact">Contact</a></li>
-                <li><a href="http://bmin.comxa.com/BrianMin_CV_Resume.pdf" target="_blank">CV/Resume</a></li>
+                <li><a href="http://uclks.co.uk/resources/uploads/docs/BrianMin_CV_Resume.pdf" target="_blank">CV/Resume</a></li>
               </ul>
             </div>
           </div>
@@ -66,7 +66,7 @@
                 <hr>
                 <h3>I am a first year MEng Computer Science student studying at University College London <i class="fa fa-university"></i></h3>
 
-                <a class="btn btn-primary" href="http://bmin.comxa.com/BrianMin_CV_Resume.pdf" target="_blank">View CV/Resume</a></button>
+                <a class="btn btn-primary" href="http://uclks.co.uk/resources/uploads/docs/BrianMin_CV_Resume.pdf" target="_blank">View CV/Resume</a></button>
 
                 <div id="about_me_list">
                     <h3>I constantly find <strong>new</strong> things to do, which ranges from figuring out how to solve a <strong>3x3 rubiks cube</strong> to learning to play the <strong>acoustic guitar</strong></h3>
@@ -84,7 +84,7 @@
                         <div class="interests">
                             <span class="label label-danger">Software Development</span></br>
                              <span class="label label-success">Game Programming</span></br>
-                            <span class="label label-primary">Problem Solving</span><br/>
+                            <span class="label label-primary">Web Development</span><br/>
                         </div>
                     </div>
                     <div class="col-sm-4" style="padding: 50px;">
@@ -103,11 +103,11 @@
                     <div class="col-sm-4" style="padding: 50px;">
                         <i class="fa fa-trophy" style="color:#00b3fe;"></i>
                         <h3>Activities</h3>
+                        <p>IT Director at UCLU Korean Society</p>
                         <p>UCLU Tech Society Member</p>
                         <p>UCLU Poker Society Member</p>
                         <p>UCLU Mixed Volleyball Team Member</p>
                         <p>UCLU Parkour Society Member</p>
-                        <p>Part-time Waiter at BBQ Restaurant</p>
                         <br/>
                     </div>
                 </div>
@@ -122,6 +122,42 @@
             </header>
 
             <div class="row">
+					 <div class="col-sm-4 project">
+                    <h3 class="projectName">UCLKS WEBSITE</h3>
+
+                    <ul id="slider7">
+                        <li><img src="images/uclks1.png" alt=""/></li>
+                        <li><img src="images/uclks2.png" alt=""/></li>
+                        <li><img src="images/uclks3.png" alt=""/></li>
+                    </ul>
+
+                    <div class="projectDesc">
+                        <h3 class="projectName">UCLKS Website</h3>
+                        <p>UCLKS IT Director - 2016</p>
+                        <p class="projectSkills">PHP/MySQL/HTML5/CSS3/Javascript/AJAX/Materialize.css</p>
+                        </br>
+                        <p>Built the UCL Korean Society website using the Materialize.css framework for the frontend and PHP/MySQL for the backend, including a user authentication system with user roles and permissions, discussion boards, a photo gallery, a mailing system, and a simple admin dashboard.</p></br>
+								<a href="http://www.uclks.co.uk" target="_blank"><i class="fa fa-link"> View Site</i></a>
+                    </div>
+                </div> <!--project-->
+					 <div class="col-sm-4 project">
+                    <h3 class="projectName">REFERENCE CHECKER</h3>
+
+                    <ul id="slider6">
+                        <li><img src="images/refcheck1.png" alt=""/></li>
+                        <li><img src="images/refcheck2.png" alt=""/></li>
+                        <li><img src="images/refcheck3.png" alt=""/></li>
+                    </ul>
+
+                    <div class="projectDesc">
+                        <h3 class="projectName">Reference Checker</h3>
+                        <p>UCL App Project 2015/16</p>
+                        <p class="projectSkills">PHP/MySQL/Javascript/HTML5/CSS3/Bootstrap</p>
+                        </br>
+                        <p>Worked in a team of two and developed the full backend and parts of the front end of the Reference Checker web app, which is a forum-style web app targeting the references of medical research papers. Includes a voting system to allow users to agree or disagree with suggestions to improve certain references.</p></br>
+								<a href="http://www.referencechecker.info" target="_blank"><i class="fa fa-link"> View App</i></a>
+                    </div>
+                </div> <!--project-->
                 <div class="col-sm-4 project">
                     <h3 class="projectName">MUSIC TV</h3>
 
