--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="col-xs-12">
                 <img class="img-responsive" src="images/profile.png" alt="">
                 <h1>BRIAN MIN</h1>
-                <h2>First Year Computer Science Student at UCL</h2>
+                <h2>Second Year Computer Science Student at UCL</h2>
             </div>
         </section>
 
@@ -54,7 +54,7 @@
                 <li><a href="#page_about_me">About Me</a></li>
                 <li><a href="#page_projects">My Projects</a></li>
                 <li><a href="#page_contact">Contact</a></li>
-                <li><a href="http://uclks.co.uk/resources/uploads/docs/BrianMin_CV_Resume.pdf" target="_blank">CV/Resume</a></li>
+                <li><a href="https://github.com/bymi15/bymi15.github.io/raw/master/docs/BrianMin_CV_Resume.pdf" target="_blank">CV/Resume</a></li>
               </ul>
             </div>
           </div>
@@ -64,9 +64,9 @@
             <header class="centered">
                 <h2 id="subheadings">About Me</h2>
                 <hr>
-                <h3>I am a first year MEng Computer Science student studying at University College London <i class="fa fa-university"></i></h3>
+                <h3>I am a second year MEng Computer Science student studying at University College London <i class="fa fa-university"></i></h3>
 
-                <a class="btn btn-primary" href="http://uclks.co.uk/resources/uploads/docs/BrianMin_CV_Resume.pdf" target="_blank">View CV/Resume</a></button>
+                <a class="btn btn-primary" href="https://github.com/bymi15/bymi15.github.io/raw/master/docs/BrianMin_CV_Resume.pdf" target="_blank">View CV/Resume</a></button>
 
                 <div id="about_me_list">
                     <h3>I constantly find <strong>new</strong> things to do, which ranges from figuring out how to solve a <strong>3x3 rubiks cube</strong> to learning to play the <strong>acoustic guitar</strong></h3>
@@ -95,9 +95,9 @@
                             <span class="label label-success">C / C++</span>
                             <span class="label label-danger">HTML / CSS</span>
                             <span class="label label-warning">PHP / MySQL</span>
-                            <span class="label label-info">VB.NET</span>
+                            <span class="label label-info">Javascript / JQuery</span>
                             <span class="label label-default">Haskell</span>
-                            <span class="label label-custom">Github</span>
+                            <span class="label label-custom">Git</span>
                         </div>
                     </div>
                     <div class="col-sm-4" style="padding: 50px;">
