added new projects

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <li><a href="#page_about_me">About Me</a></li>
                 <li><a href="#page_projects">My Projects</a></li>
                 <li><a href="#page_contact">Contact</a></li>
-                <li><a href="https://github.com/bymi15/bymi15.github.io/raw/master/docs/BrianMin_CV_Resume.pdf" target="_blank">CV/Resume</a></li>
+                <li><a href="http://uclks.co.uk/resources/uploads/docs/BrianMin_CV_Resume.pdf" target="_blank">CV/Resume</a></li>
               </ul>
             </div>
           </div>
@@ -66,7 +66,7 @@
                 <hr>
                 <h3>I am a second year MEng Computer Science student studying at University College London <i class="fa fa-university"></i></h3>
 
-                <a class="btn btn-primary" href="https://github.com/bymi15/bymi15.github.io/raw/master/docs/BrianMin_CV_Resume.pdf" target="_blank">View CV/Resume</a></button>
+                <a class="btn btn-primary" href="http://uclks.co.uk/resources/uploads/docs/BrianMin_CV_Resume.pdf" target="_blank">View CV/Resume</a></button>
 
                 <div id="about_me_list">
                     <h3>I constantly find <strong>new</strong> things to do, which ranges from figuring out how to solve a <strong>3x3 rubiks cube</strong> to learning to play the <strong>acoustic guitar</strong></h3>
@@ -78,29 +78,30 @@
 
             <div id="about_me">
                 <div class="row centered">
-                    <div class="col-sm-4" style="padding: 30px;">
+                    <div class="col-sm-4">
                         <i class="fa fa-heart-o" style="color:#e30000;"></i>
                         <h3>Interests</h3>
                         <div class="interests">
                             <span class="label label-danger">Software Development</span></br>
                              <span class="label label-success">Game Programming</span></br>
                             <span class="label label-primary">Web Development</span><br/>
+                            <span class="label label-warning">API Development</span><br/>
                         </div>
                     </div>
-                    <div class="col-sm-4" style="padding: 50px;">
+                    <div class="col-sm-4">
                         <i class="fa fa-code" style="color:#30f000;"></i>
                         <h3>Skills</h3>
                         <div class="skills">
                             <span class="label label-primary">Java / Android</span>
                             <span class="label label-success">C / C++</span>
-                            <span class="label label-danger">HTML / CSS</span>
-                            <span class="label label-warning">PHP / MySQL</span>
-                            <span class="label label-info">Javascript / JQuery</span>
+                            <span class="label label-danger">HTML / CSS / Javascript</span>
+                            <span class="label label-warning">PHP / MySQL / API Dev</span>
+                            <span class="label label-info">Ionic / AngularJS</span>
                             <span class="label label-default">Haskell</span>
-                            <span class="label label-custom">Git</span>
+                            <span class="label label-custom">Git/Github</span>
                         </div>
                     </div>
-                    <div class="col-sm-4" style="padding: 50px;">
+                    <div class="col-sm-4">
                         <i class="fa fa-trophy" style="color:#00b3fe;"></i>
                         <h3>Activities</h3>
                         <p>IT Director at UCLU Korean Society</p>
@@ -122,7 +123,40 @@
             </header>
 
             <div class="row">
-					 <div class="col-sm-4 project">
+                <div class="col-sm-4 project"> <!--project-->
+                    <h3 class="projectName">MAPLACE LANDING PAGE</h3>
+
+                    <ul id="slider9">
+                        <li><img src="images/maplace1.png" alt=""/></li>
+                        <li><img src="images/maplace2.png" alt=""/></li>
+                        <li><img src="images/maplace3.png" alt=""/></li>
+                    </ul>
+
+                    <div class="projectDesc">
+                        <h3 class="projectName">Maplace.co</h3>
+                        <p>Maplace Intern (Oct 2016 - June 2017)</p>
+                        <p class="projectSkills">Javascript/HTML5/CSS3/Bootstrap</p>
+                        </br>
+                        <p>Created a mobile responsive landing page for Maplace to attract investors to pre-order, this included setting up the Paypal payment system for Maplace pre-orders by integrating the Paypal API with the Maplace landing page.</p></br>
+                        <a href="http://www.maplace.co" target="_blank"><i class="fa fa-link"> View Site</i></a>
+                    </div>
+                </div> <!--project-->
+                <div class="col-sm-4 project"> <!--project-->
+                    <h3 class="projectName">REFERENCE LIST MANAGER</h3>
+
+                    <ul id="slider8">
+                        <li><img src="images/refman.png" alt=""/></li>
+                    </ul>
+
+                    <div class="projectDesc">
+                        <h3 class="projectName">Reference List Manager</h3>
+                        <p>UCL Scenario Week Project</p>
+                        <p class="projectSkills">RubyOnRails/SQLite/HTML/CSS/Javascript</p>
+                        <p>One week team project to build a web application and automate deployment to a virtual machine. Used three Azure virtual machines: one for the production server, one for the staging server and one for Jenkins (used to automate deployment through Github and continuous integration using the other two servers). I built the entire web app using Ruby on Rails and SQLite.</p>
+                        <a href="https://github.com/ScenarioWeek-TeamU/AWS_VM_References" target="_blank"><i class="fa fa-github"> Github</i></a>
+                    </div>
+                </div> <!--project-->
+                     <div class="col-sm-4 project">
                     <h3 class="projectName">UCLKS WEBSITE</h3>
 
                     <ul id="slider7">
@@ -137,10 +171,10 @@
                         <p class="projectSkills">PHP/MySQL/HTML5/CSS3/Javascript/AJAX/Materialize.css</p>
                         </br>
                         <p>Built the UCL Korean Society website using the Materialize.css framework for the frontend and PHP/MySQL for the backend, including a user authentication system with user roles and permissions, discussion boards, a photo gallery, a mailing system, and a simple admin dashboard.</p></br>
-								<a href="http://www.uclks.co.uk" target="_blank"><i class="fa fa-link"> View Site</i></a>
+                                <a href="http://www.uclks.co.uk" target="_blank"><i class="fa fa-link"> View Site</i></a>
                     </div>
                 </div> <!--project-->
-					 <div class="col-sm-4 project">
+                     <div class="col-sm-4 project">
                     <h3 class="projectName">REFERENCE CHECKER</h3>
 
                     <ul id="slider6">
@@ -155,7 +189,7 @@
                         <p class="projectSkills">PHP/MySQL/Javascript/HTML5/CSS3/Bootstrap</p>
                         </br>
                         <p>Worked in a team of two and developed the full backend and parts of the front end of the Reference Checker web app, which is a forum-style web app targeting the references of medical research papers. Includes a voting system to allow users to agree or disagree with suggestions to improve certain references.</p></br>
-								<a href="http://www.referencechecker.info" target="_blank"><i class="fa fa-link"> View App</i></a>
+                                <a href="http://www.referencechecker.info" target="_blank"><i class="fa fa-link"> View App</i></a>
                     </div>
                 </div> <!--project-->
                 <div class="col-sm-4 project">
@@ -256,7 +290,7 @@
 
         <a name="page_contact"></a>
 
-        <section id="bg_contact">
+        <section id="bg_contact" style="text-align: center;">
             <div class="row">
                 <h2 id="subheadings">Contact</h2>
                 <h3>Connect with me through my social networks or feel free to drop me an email:</h3>
