--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <li><a href="#page_about_me">About Me</a></li>
                 <li><a href="#page_projects">My Projects</a></li>
                 <li><a href="#page_contact">Contact</a></li>
-                <li><a href="http://uclks.co.uk/resources/uploads/docs/BrianMin_CV_Resume.pdf" target="_blank">CV/Resume</a></li>
+                <li><a href="https://github.com/bymi15/bymi15.github.io/raw/master/docs/BrianMin_CV_Resume.pdf" target="_blank">CV/Resume</a></li>
               </ul>
             </div>
           </div>
@@ -66,7 +66,7 @@
                 <hr>
                 <h3>I am a second year MEng Computer Science student studying at University College London <i class="fa fa-university"></i></h3>
 
-                <a class="btn btn-primary" href="http://uclks.co.uk/resources/uploads/docs/BrianMin_CV_Resume.pdf" target="_blank">View CV/Resume</a></button>
+                <a class="btn btn-primary" href="https://github.com/bymi15/bymi15.github.io/raw/master/docs/BrianMin_CV_Resume.pdf" target="_blank">View CV/Resume</a></button>
 
                 <div id="about_me_list">
                     <h3>I constantly find <strong>new</strong> things to do, which ranges from figuring out how to solve a <strong>3x3 rubiks cube</strong> to learning to play the <strong>acoustic guitar</strong></h3>
